fix: harden httpclient